# coding-contest

./: .gitignore  README.md  pyproject.toml
35/levels/level2/: level2_example.in  level2_example.out
35/levels/level3/: level3_1.out  level3_2.out  level3_3.out  level3_4.out  level3_5.out  level3_example.out
35/levels/level4/: level4_1.out  level4_2.out  level4_3.out  level4_4.out  level4_5.out  level4_example.out
35/levels/level5/: level5_1.out  level5_2.out  level5_3.out  level5_4.out  level5_5.out  level5_example.in
35/levels/level6/: level6_1.in  level6_1.out  level6_2.in  level6_2.out  level6_3.in  level6_3.out  level6_4.in  level6_4.out  level6_5.in  level6_5.out  level6_example.in  level6_example.out  level6_example.out2
35/src/: level1.py  level2.py  level3.py  level4.py  level5.py  level6.py
36/levels/level4/: level4_1.out  level4_2.out  level4_3.out  level4_4.out  level4_5.out
36/levels/level5/: level5_2.out  level5_3.out  level5_4.out  level5_5.out
36/levels/level6/: level6_1.in
36/src/: level1.py  level2.py  level3.py  level4.py  level5.py  level6.py  level7.py
37/levels/level3/: level3_1.out  level3_2.out  level3_3.out  level3_4.out  level3_5.out  level3_example.out
37/levels/level4/: level4_1.out  level4_2.out  level4_3.out  level4_4.out  level4_5.out  (+1 more)
37/src/: level1.py  level2.py  level3.py  level4.py  level4_old.py  level5.py
38/src/: level1.py  level2.py  level3.py  level4.py  level5.py  level6.py  level7.py
39/src/: level1.py  level2.py  level3.py  level4.py
_template/src/: level1.py  level2.py  level3.py  level6.py
(+28 files in other folders)
