[project]
name = "coding-contest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cpmpy>=0.9.23",
    "numpy>=2.1.2",
    "tqdm>=4.66.5",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q"]
